--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,17 @@ atomicwrites==1.4.0
 attrs==21.2.0
 colorama==0.4.4
 distlib==0.3.2
+dj-database-url==0.5.0
 Django==3.2.5
+django-decouple==2.1
+django-heroku==0.3.1
 env==0.1.0
 filelock==3.0.12
+gunicorn==20.1.0
 iniconfig==1.1.1
 packaging==20.9
 pluggy==0.13.1
+psycopg2==2.9.1
 py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.4
@@ -18,3 +23,4 @@ six==1.16.0
 sqlparse==0.4.1
 toml==0.10.2
 virtualenv==20.4.7
+whitenoise==5.3.0
